# plugin_demo

./: CMakeLists.txt  README.md  bar.c  baz.c  foo.c  main.c  spam.c  spam.h  test.sh
